# examples

./: .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  Readme.md  deploy.sh  package-lock.json  package.json  tsconfig.json
client/: Cargo.toml  programId.ts
client/accounts/: VrfClientState.ts
client/errors/: custom.ts
client/instructions/: consumeRandomness.ts  index.ts  initClient.ts  requestRandomness.ts
client/src/: consts.rs  main.rs  structs.rs
client/src/transactions/: generate_token.rs  generate_vault.rs  mod.rs  say_hello.rs  stake.rs  stake_nft.rs  unstake.rs  unstake_nft.rs
client/types/: ConsumeRandomnessParams.ts  InitClientParams.ts  RequestRandomnessParams.ts
program/: Cargo.toml
program/src/: consts.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs
program/src/processor/: generate_random_number.rs  generate_random_number_v2.rs  mod.rs  say_hello.rs
program/src/processor/staking/: mod.rs  stake.rs  stake_nft.rs  unstake.rs
program/src/state/: mod.rs  nft_staking.rs  staking.rs
program/tests/: common.rs  say_hello.rs
programs/anchor-vrf/: Cargo.toml
programs/anchor-vrf/src/: lib.rs
programs/anchor-vrf/src/actions/: consume_randomness.rs  init_client.rs  mod.rs  request_random.rs
programs/reward_pool/: Cargo.toml
programs/reward_pool/src/: consts.rs  error.rs  instruction.rs  lib.rs
programs/reward_pool/src/processor/: generate_vault.rs  mod.rs
programs/reward_pool/src/processor/staking/: mod.rs  stake.rs  stake_nft.rs  unstake.rs  unstake_nft.rs
programs/reward_pool/src/state/: mod.rs  nft_staking.rs  staking.rs
programs/token/: Cargo.toml
programs/token/src/: consts.rs  error.rs  instruction.rs  lib.rs
programs/token/src/processor/: generate_token.rs  mod.rs
tests/: anchor-vrf.ts
