[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.10.33"
solana-sdk = "1.10.33"
clap = "2.33.3"
serde_json = "1.0"
serde = "1.0"
borsh = "0.9.0"
borsh-derive = "0.9.0"
switchboard-v2 = { version = "0.1.14", features = ["devnet"] }