[package]
name = "example_program"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.9.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.31"
borsh = "0.9.0"
borsh-derive = "0.9.0"

[dev-dependencies]
solana-program-test = "=1.9.0"
solana-sdk = "=1.9.0"

[lib]
name = "example_program"
crate-type = ["cdylib", "lib"]