[package]
name = "vrf_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.10.33"
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.31"
borsh = "0.9.0"
borsh-derive = "0.9.0"
switchboard-v2 = {version =  "0.1.14", features = ["devnet"] }
bytemuck = "1.12.2"
spl-token = "3.3.0"
anchor-spl = "0.25.0"

[dev-dependencies]
solana-client = "=1.10.33"
solana-sdk = "=1.10.33"

[lib]
name = "vrf_test"
crate-type = ["cdylib", "lib"]