[package]
name = "reward_pool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.9.13"
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.31"
borsh = "0.9.0"
borsh-derive = "0.9.0"
spl-token = { version = "3.1.1", features = [ "no-entrypoint" ] }
spl-associated-token-account = {version = "1.0.3", features = [ "no-entrypoint" ]}
mpl-token-metadata = { version = "1.6.1", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "1.10.26"
solana-sdk = "1.10.26"

[lib]
name = "reward_pool"
crate-type = ["cdylib", "lib"]